# PVConsumer

./: .all-contributorsrc  .bumpversion.cfg  .pre-commit-config.yaml  Makefile  README.md  format.sh  pyproject.toml  release-docker.yml  requirements.txt  setup.py  test-docker-compose.yml
.github/workflows/: build-docker.yml  linters.yaml  release.yaml  test-docker.yaml  tests.yaml
infrastructure/docker/: Dockerfile
pvconsumer/: __init__.py  app.py  pv_systems.py  save.py  solar_sheffield_passiv.py  utils.py
pvconsumer/data/: pv_systems_solar_sheffield_passiv.csv
scripts/: get_installed_capacity.py  get_pv_systems.py  make_data_ss_file.py  update_tilt.py
tests/: conftest.py  readme.md  test_app.py  test_pv_systems.py  test_ss_passiv.py  test_utils.py
tests/data/: pv_systems.csv  pv_systems_solar_sheffield.csv
tests/intergration/: test_app.py  test_pv_systems_integration.py  test_ss_passiv.py
tests/unittest/: test_pv_systems.py  test_utils.py
